# websec-assess

./: .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml  example.yaml
docs/: architecture.md  database_schema.md  installation.md  plugin_development.md
examples/reports/: sample_report.html  sample_report.json  sample_report.md
reports/: 397761c9-64d0-450c-b381-89ef25250fc7.html  397761c9-64d0-450c-b381-89ef25250fc7.json  397761c9-64d0-450c-b381-89ef25250fc7.md
src/websec_assess/cli/: console.py  main.py
src/websec_assess/core/: config.py  cookies.py  html_extract.py  http_client.py  logging.py  models.py  plugin.py  probing.py  queue.py  safety.py  severity.py  wordlist.py
src/websec_assess/core/db/: engine.py  models.py  repository.py
src/websec_assess/core/reporting/: __init__.py  common.py  html_report.py  json_report.py  markdown_report.py
src/websec_assess/data/: cloud_cicd_paths.txt  directories_small.txt  files_small.txt  parameters_common.txt  subdomains_small.txt
src/websec_assess/integrations/: base.py  dnsx.py  gau.py  httpx_tool.py  katana.py  naabu.py  normalize.py  nuclei.py  subfinder.py  waybackurls.py
src/websec_assess/plugins/api_security/: __init__.py  _extension_points.py  graphql_discovery.py  openapi_parser.py
tests/: conftest.py  test_integrations_normalize.py  test_models.py  test_plugin_registry.py  test_reporting.py  test_safety.py  test_vuln_assessment_plugins.py
tests/integration/: test_scan_against_local_server.py
(+47 files in other folders)
