[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "websec-assess"
version = "0.1.0"
description = "Modular web application security assessment platform for authorised penetration tests, labs, CTFs and permitted bug bounty targets."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Harry Corcoran" }]
dependencies = [
  "pydantic>=2.6",
  "sqlalchemy>=2.0",
  "httpx>=0.27",
  "dnspython>=2.6",
  "jinja2>=3.1",
  "pyyaml>=6.0",
  "rich>=13.7",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "mypy>=1.9",
]

[project.scripts]
websec-assess = "websec_assess.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
websec_assess = ["data/*.txt", "core/reporting/templates/*.j2"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
